# V-KIT

./: CMakeCache.txt  CMakeLists.txt  Visual.hpp  build.ninja  cmake_install.cmake  imgui.ini  main.cpp
.cmake/api/v1/reply/: cache-v2-e740b9e271feab658a0f.json  directory-_deps.glfw-build-Debug-491033870d7535809818.json  index-2026-02-10T21-03-42-0775.json  target-glfw-Debug-22d8bc8e27809d25d7bb.json  target-simple-Debug-0670e0c448841693d19c.json  target-splitview-Debug-b23a9c860af50cfe5a9e.json  target-vulpine-Debug-60da7d60cd2aabc5739e.json  target-wave-Debug-0abe431fbb3c74480a0f.json
V-KIT/: Helper.hpp  README.md  V-KIT.hpp  VTokens.hpp
V-KIT/builder/: analyzer.hpp  builder.cpp  builder.hpp
V-KIT/tokenizer/: Tokenizer.cpp  Tokenizer.hpp
